tests/integration/snapshots/check/enable_only/check_enable_only_preserves_deny_for_selected_rule.txt
error[E003]: variable can be immutable
  --> [ROOT]/contracts/main[LINE]
  |
4 |                 var x = 1; // E003
  |                     ^ can be made val

help: use `val` instead
  --> [ROOT]/contracts/main[LINE]
  |
4 |                 var x = 1; // E003
  |                 ^^^ val


1 issue can be fixed automatically, rerun with --fix flag.

Use acton check --explain <CODE> to get detailed explanation of a rule.
For example: acton check --explain E003
